Added a search button to the results page and changed the styling on the search boxes so that the buttons fit better

--- a/styles/results.css
+++ b/styles/results.css
@@ -55,7 +55,7 @@ h4{
     text-align: center;
     background-color: #F0F0C9;
     width: 500px;
-    height: auto;
+    height: 190px;
     border: #6E0E0A;
     border-width: 10px;
     border-style: solid;
