--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,9 @@ h2{
     margin: auto;
     border-radius: 20px;
     margin-top: 100px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .searchbar{
