--- a/styles/results.css
+++ b/styles/results.css
@@ -94,3 +94,25 @@ h4{
 }
 
 
+  
+  .card {
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    text-align: center;
+  }
+  
+  .author-section {
+    text-align: left;
+  }
+  
+  .book-section {
+    text-align: right;
+  }
+  
+  .bookImage img,
+  .authorInfo img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+  }
