--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,7 @@ h2{
     border-radius: 80px;
     margin-top: 30px;
     margin-bottom:10px;
+    
 }
 
 .search{
@@ -57,6 +58,8 @@ h2{
     margin: auto;
     border-radius: 20px;
     margin-top: 100px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .searchbar{
