--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,11 @@ descriptions of colours are given with their hex codes.
 'Syracuse Red Orange', dark-ish orange, #D74E09
 'Blood Red', very dark red, #6E0E0A
 */
+*{
+    font-family: "Goudy Bookletter 1911", serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
 
 body{
