--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,7 @@ descriptions of colours are given with their hex codes.
     font-family: "Goudy Bookletter 1911", serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 1.75rem;
 }
 
 
